<resources>

    <string name="web_client_id" translatable="false">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</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1130551477828008</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1130551477828008</string>
    <string name="facebook_client_token" translatable="false">00e90b9811bfcbab8eaadb441f4948e5</string>

    <!-- THIS PART IS INTRO_ACTIVITY STRINGS -->
    <string name="app_name">Aghithni</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="App_Description">An application to donate and search for blood and medicine.</string>

    <!-- THIS PART IS CHOOSE_ACTIVITY STRINGS -->
    <string name="choose">Do you want to donate or looking for:</string>
    <string name="blood">Blood</string>
    <string name="medicine">Medicine</string>

    <!-- THIS PART IS BOTTOM_NAV_BAR Strings -->
    <string name="home_title">Home</string>
    <string name="ChatList_title">Chat</string>
    <string name="Profile_title">Profile</string>
    <string name="Menu_title">Menu</string>
    <string name="hello_blank_fragment">blank fragment</string>

    <!--THIS PART IS PROFILE_ACTIVITY STRINGS-->
    <string name="FullName">Full Name</string>
    <string name="toast_login">"You Don't Have an Account yet."</string>
    <string name="dialog_message">You need to sign in to show your Personal Data.</string>
    <string name="username">username</string>
    <string name="signin">Sign in</string>

    <!--THIS PART IS SIGNIN_ACTIVITY STRINGS-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_connect_with">Or connect with:</string>
    <string name="login">Log in</string>
    <string name="dont_have_accnt">Don\'t have an account \n Sign Up Here</string>


    <!--THIS PART IS VERIFY_EMAIL_ACTIVITY STRINGS-->
    <string name="verifyemail">Verify your email address</string>
    <string name="verifyemail_txt">to start using Aghithni,we need to verify your email ID.</string>
    <string name="verifyemail_spam_txt">Please check your spam or junk folder, if you are expecting a reply and can\'t find it in your inbox.Thank you.</string>
    <string name="clicktoverify">Click to verify</string>


    <!--THIS PART IS SIGNUP_ACTIVITY STRINGS-->
    <string name="entr_ur_fllname">Enter your full name</string>
    <string name="entr_ur_usrname">Enter your username</string>
    <string name="cnfrm_psswd">Confirm password</string>
    <string name="gndr">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signun">Sign un</string>
    <string name="alrddy_hv_accnt_signin">Already have an account.\nLogin Here</string>


    <!--THIS PART IS SETTING_FRAGMENT STRINGS-->
    <string name="settings_title">Settings</string>
    <string name="edit_prsnl_data">Edit personal Data</string>
    <string name="signout">Sign out</string>
    <string name="notifications">Notifications</string>
    <string name="Languages">Languages</string>
    <string name="change_Languages">Change Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_psswd">Change Password</string>


    <!--THIS PART IS EditData_ACTIVITY STRINGS-->
    <string name="email_verified">email verified</string>
    <string name="email_not_verified">email not verified</string>
    <string name="delete_account">Delete Account</string>
    <string name="save">Save</string>


    <!--THIS PART IS DELETE_ACCOUNT_DIALOG STRINGS-->
    <string name="delete_account_msg">Are you sure you want to delete your account?
If you delete your account, you will permanently
lose your profile, messages, and photos.</string>
    <string name="delete_account_msg_email_typing">Type your email to confirm</string>


    <!--THIS PART IS REQUIRED_SIGNOUT_DIALOG STRINGS-->
    <string name="required_sign_out">Requires sign out</string>
    <string name="required_reconnect">This operation is sensitive and requires you to reconnect.</string>

    <!--THIS PART IS RESSET_PASSWORD_ACTIVITY STRINGS-->
    <string name="resset_psswd">Reset Password</string>
    <string name="remember_psswd">Make sure you remember your password.</string>
    <string name="current_psswd">Current Password</string>
    <string name="forgot_psswd">forgot password?</string>
    <string name="new_psswd">New Password</string>
    <string name="confirm_psswd">Confirm Password</string>
    <string name="update_psswd">Mettre à jour le mot de passe</string>
    <string name="wrong_psswd">mot de passe incorrect</string>
    <string name="psswd_not_match">les mots de passe ne correspondent pas</string>
    <string name="english">English</string>
    <string name="frensh">Frensh</string>
    <string name="arabic">Arabic</string>
    <string name="search">Search</string>
    <string name="donate">Donate</string>
    <string name="post">Post</string>
    <string name="add_picture">Add picture</string>
    <string name="write_something">Write something</string>
    <string name="bloodtype_txt">Blood Type:</string>
    <string name="select_bloodtype_txt">Choose the blood type</string>
    <string name="delete_pics_btn">Delete the current picture</string>
    <string name="wilaya">The state</string>
    <string name="commune">The town</string>
    <string name="add_your_phone_number">Add your phone number</string>
    <string name="add_phone_number_desc">Add your phone number for easy contact with you.</string>
    <string name="type_number">Type your number</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm">Confirm</string>


</resources>