<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".IntroApp"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/signUp_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
        <!--invoke the background as the
            custom_edit_text_rounded-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/color_grey"
            app:hintTextColor="#000000">

            <EditText
                android:id="@+id/fullnameField1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawableStart="@drawable/custom_person_icon"
                android:drawablePadding="12dp"
                android:hint="@string/entr_ur_fllname"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/color_grey"
            app:hintTextColor="#000000">

            <EditText
                android:id="@+id/usernameField1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawableStart="@drawable/custom_person_icon"
                android:drawablePadding="12dp"
                android:hint="@string/entr_ur_usrname"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField1_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/color_grey"
            app:hintTextColor="#000000">

            <EditText
                android:id="@+id/emailField1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawableStart="@drawable/custom_mail_icon"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--same background for the password field
            as the custom_edit_text_rounded-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/color_grey"
            app:hintTextColor="#000000"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordField1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawableStart="@drawable/custom_password_icon"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"

                android:paddingEnd="12dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/con_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/color_grey"
            app:hintTextColor="#000000"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/con_passwordField1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawableStart="@drawable/custom_password_icon"
                android:drawablePadding="12dp"
                android:hint="@string/cnfrm_psswd"
                android:inputType="textPassword"
                android:paddingStart="12dp"

                android:paddingEnd="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gndr"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gender_background_selector_male"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_male"
                android:padding="16dp"
                android:text="@string/male"
                android:textAlignment="center"
                android:textColor="@color/gender_text_selector"
                android:textSize="16dp"
                app:drawableTint="@color/gender_text_selector" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/gender_background_selector_female"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_female"
                android:padding="16dp"
                android:text="@string/female"
                android:textAlignment="center"
                android:textColor="@color/gender_text_selector"
                android:textSize="16dp"
                app:drawableTint="@color/gender_text_selector" />

        </RadioGroup>




        <Button
            android:id="@+id/register_btn_id"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#0F3460"
            android:padding="16dp"
            android:text="@string/signun"
            android:textSize="24sp"
            app:cornerRadius="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.84" />

        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/alrddy_hv_accnt_signin"
            android:textAlignment="center"
            android:textColor="@color/bleu_dark"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
