<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageSelection">




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                >
                <TextView
                    android:id="@+id/arabic_id"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/algeria_flag"
                    android:textSize="23dp"
                    android:textColor="@color/black"
                    android:text="@string/arabic"
                    android:clickable="true"
                    android:focusable="true"/>

                <TableRow
                    android:id="@+id/tr1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/shadow_color"></TableRow>

                <TextView
                    android:id="@+id/english_id"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/unitedkingdom_flag"
                    android:textSize="23dp"
                    android:textColor="@color/black"
                    android:text="@string/english"
                    android:clickable="true"
                    android:focusable="true"/>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/shadow_color"></TableRow>


                <TextView
                    android:id="@+id/frensh_id"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/frensh_flag"
                    android:textSize="23dp"
                    android:textColor="@color/black"
                    android:text="@string/frensh"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>
        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>